# tasks

./: .gitignore  README.md  create_notes.sh  diary.bat  extract_tex.sh  launch_bash.bat  monitor_usage.sh  print_date.bat  start_bash.bat
claude_cli/: Cargo.toml  README.md
claude_cli/src/: main.rs
ctree/: Cargo.toml  README.md
grrs/: Cargo.toml
grrs/src/: main.rs
pdf_parse_latex/: README.md  pyproject.toml
rag_document/: PLAN.md
synchronize_local/: Cargo.toml  README.md
synchronize_local/src/: main.rs
tmux/: tmux_4_panes_horizontal_screen.sh
todo/: Cargo.toml  README.md  main.rs
todo-list/: Cargo.toml
todo-list/src/: base.rs  form.rs  main.rs  popup.rs  utils.rs
todo/src/: main.rs  popup.rs
vocab/: Cargo.toml
vocab/src/: main.rs
