[package]
name = "claude_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
clap = { version = "4.1", features = ["derive"] }
dirs = "5.0.1"
nix = "0.29.0"
cli-clipboard = "0.4.0"
